parser/src/test/resources/corpus/valid/49_import_decl.ff
import fundflow.stdlib.fees

rule "After Import" {
  description: "imports come before rules"
}
