parser/src/test/resources/corpus/invalid/57_import_after_rule.ff
rule "Already Defined" {
  description: "imports must come before rules"
}

import fundflow.stdlib.fees
